--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.qameta.allure" version "2.9.6"
 }
 
 group 'org.new'
@@ -17,19 +18,35 @@ compileTestJava {
 }
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    implementation 'org.jetbrains:annotations:20.1.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testImplementation 'com.codeborne:selenide:6.11.1'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
-
+    implementation (
+            'org.junit.jupiter:junit-jupiter:5.9.2',
+            'org.jetbrains:annotations:20.1.0',
+            'tech.grasshopper:allure-attachment-processor:2.1.0',
+            'io.qameta.allure:allure-attachments:2.21.0',
+            'org.junit.jupiter:junit-jupiter-api:5.9.2',
+            'com.codeborne:selenide:6.11.1',
+            'com.github.javafaker:javafaker:1.0.2',
+            'org.junit.jupiter:junit-jupiter-engine:5.9.2',
+            'io.qameta.allure:allure-selenide:2.17.3'
+    )
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+
+allure {
+    report {
+        version.set("2.17.3")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.17.3")
+            }
+        }
+    }
 }
 
 test {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 }
