--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
 plugins {
-    id 'java'
-    id "io.qameta.allure" version "2.9.6"
+    id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
-group 'org.new'
-version '1.0-SNAPSHOT'
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter { //отвечает за появление папки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.19.0")
+            }
+        }
+    }
+}
 
 repositories {
     mavenCentral()
@@ -18,35 +29,25 @@ compileTestJava {
 }
 
 dependencies {
-    implementation (
+    testImplementation (
+            'com.codeborne:selenide:6.12.3',
             'org.junit.jupiter:junit-jupiter:5.9.2',
-            'org.jetbrains:annotations:20.1.0',
-            'tech.grasshopper:allure-attachment-processor:2.1.0',
-            'io.qameta.allure:allure-attachments:2.21.0',
-            'org.junit.jupiter:junit-jupiter-api:5.9.2',
-            'com.codeborne:selenide:6.11.1',
+            'org.slf4j:slf4j-simple:2.0.6',
             'com.github.javafaker:javafaker:1.0.2',
-            'org.junit.jupiter:junit-jupiter-engine:5.9.2',
-            'io.qameta.allure:allure-selenide:2.17.3'
+            'com.codeborne:pdf-test:1.5.0',
+            'com.codeborne:xls-test:1.4.3',
+            'com.opencsv:opencsv:5.7.1',
+            'com.fasterxml.jackson.core:jackson-core:2.14.2',
+            'com.fasterxml.jackson.core:jackson-databind:2.14.2',
+            'io.qameta.allure:allure-selenide:2.19.0'
     )
 }
-
-
-allure {
-    report {
-        version.set("2.17.3")
-    }
-    adapter {
-        aspectjWeaver.set(true)
-        frameworks {
-            junit5 {
-                adapterVersion.set("2.17.3")
-            }
-        }
-    }
-}
-
 test {
     useJUnitPlatform()
-    systemProperties(System.getProperties())
+}
+
+task remote_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("Registration")
+    }
 }
